-> Made the plotting page taller to make more space for legends, etc. -> Fixed additional plotting layout issues

--- a/blink_sass/pages/_visualizations.sass
+++ b/blink_sass/pages/_visualizations.sass
@@ -13,7 +13,7 @@
 
   .plot-div
     overflow: hidden
-    max-height: 700px
+    max-height: 925px
     foreignObject
       div
         overflow: hidden
