--- a/blink_sass/pages/_workbook.sass
+++ b/blink_sass/pages/_workbook.sass
@@ -40,7 +40,7 @@
     float: left
     width: 25%
     background: darken($white, 8%)
-    min-height: 975px
+    min-height: 1200px
     position: relative
     transition: width 0.45s ease-in-out
 
